--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -1,3 +1,13 @@
 .footer {
-  position: fixed;
+  display: flex;
+  padding-right: 3rem;
+  justify-content: flex-end;
+}
+
+.displayNone {
+  display: none;
+}
+
+.display {
+  display: flex;
 }
