--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -1,3 +1,8 @@
 .header {
   height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--brandColor);
+  color: white;
 }
