--- a/src/assets/styles/Main.css
+++ b/src/assets/styles/Main.css
@@ -1,3 +1,19 @@
 .main {
+  position: relative;
   min-height: 80vh;
+  padding-top: 4rem;
+}
+
+.completed,
+.incompleted {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.completed_title {
+  font-size: 1.8rem;
+  font-weight: bold;
 }
