--- a/src/assets/styles/Header.css
+++ b/src/assets/styles/Header.css
@@ -6,3 +6,9 @@
   background-color: var(--brandColor);
   color: white;
 }
+
+@media (min-width: 600px) {
+  .header__title {
+    font-size: 4rem;
+  }
+}
